drivers no longer accepts nested attributes for documents, add driver_history and driver_compliance controllers, add remote forms for driver histories and compliances to driver edit page [#98939216][#98939212]

--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -11,7 +11,7 @@
   </td>
   <% unless @readonly %>
     <td>
-      <%= link_to "X", polymorphic_path([document.documentable, document]), remote: true, method: :delete, data: { confirm: 'Are you sure you want to delete this document?' }, class: "btn btn-danger btn-sm pull-right" %>
+      <%= link_to "X", polymorphic_path([document.documentable, document]), remote: true, method: :delete, data: { confirm: translate_helper("document_delete_confirm") }, class: "btn btn-danger btn-sm pull-right" %>
     </td>
   <% end %>
 </tr>
