--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header" class="clearfix">
-  <h1><%= translate_helper("edit_document_heading") %></h1>
+  <h1><%= translate_helper("document_form_edit_heading") %></h1>
 </div>
 
 <%= render partial: "form" %>
