Updated a v1 styles to match what's currently being used on ridepilot production, fix some application layout issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,14 +60,16 @@
   </div><!-- /#crossbar -->
 
   <div id="main">
-    <% if notice %>
-      <p class="notice"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert"><%= alert %></p>
-    <% end %>
-    <%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
-    <%= yield %>
+    <div class="wrap selfclear">
+      <% if notice %>
+        <p class="notice"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
+      <%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
+      <%= yield %>
+    </div>
   </div>
 
   <%= render partial: 'layouts/footer' %>
