--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers' %>
+
 <div id="page-header" class="row">
   <div class="col-sm-12 col-md-6">
     <h1><%= translate_helper("new_driver_heading") %></h1>
