--- a/app/views/runs/_filters.html.haml
+++ b/app/views/runs/_filters.html.haml
@@ -23,7 +23,7 @@
         = f.label :driver_id, translate_helper(:driver)
         = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name, session[:driver_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       .col-sm-12{style: 'padding: 5px;'}
-        = f.label :run_result_id, translate_helper(:result)
+        = f.label :run_result_id, translate_helper(:run_result)
         = f.select :run_result_id, options_for_select( [[translate_helper(:complete), 1], [translate_helper(:incomplete), 2]], session[:run_result_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
 
 = render "shared/date_time_picker_javascript"
