--- a/app/views/trips_runs/_trip_row.html.erb
+++ b/app/views/trips_runs/_trip_row.html.erb
@@ -1,5 +1,6 @@
 <tr class="trip">
   <td>
+    <input type='radio' name='trip_records' value="<%=trip.id%>"></input>
   </td>
   <td>
     <%= link_to(translate_helper("view"), trip_path(trip)) %>
