--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= content_for?(:title) ? yield(:title) : translate_helper("application_title") %>
   </title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= split_stylesheet_link_tag "v1_theme", :media => "all" %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <%= yield :head %>
