--- a/app/views/trips_runs/_trip_row.html.erb
+++ b/app/views/trips_runs/_trip_row.html.erb
@@ -1,6 +1,6 @@
 <tr class="trip">
   <td>
-    <input type='radio' name='trip_records' value="<%=trip.id%>"></input>
+    <input type='radio' name='trip_records' value="<%=trip.id%>" data-run-id="<%=trip.adjusted_run_id%>"></input>
   </td>
   <td>
     <%= link_to(translate_helper("view"), trip_path(trip)) %>
@@ -21,6 +21,6 @@
     <%= trip.dropoff_address.try :address_text %>
   </td>
   <td>
-    <%= link_to_if trip.run.present?, trip.run_text, runs_path(:start => trip.run.try(:date).try(:to_time).to_i) %>
+    <%= render 'run_dropdown', trip: trip %>
   </td>
 </tr>
