finish scheduling UI workflow; need to find a way to move events on calendar via javascript, without reloading the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
   </div><!-- /#crossbar -->
 
   <div id="main">
-    <div class="wrap selfclear">
+    <div id="messages" class="wrap selfclear">
       <% if notice %>
         <p class="notice"><%= notice %></p>
       <% end %>
