--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -58,6 +58,7 @@ table.table
 // calendar
 .fc-view {
   overflow: scroll;
+  //max-height: 500px !important;
 
   table {
     min-width: 1000px !important;
