added date range in page header; on trips-runs page, set current date as default

--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -1,7 +1,7 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips_runs'
 .clearfix.row#page-header{style: 'padding: 0px;'}
   = link_to translate_helper("new_run_link_text"), new_run_path, :class=>'btn action-button pull-right'
-  %h1= translate_helper("trips_runs")
+  %h1= translate_helper("trips_runs") + ": " + format_time_as_title_for_listing_day(@run_trip_day)
   .clearfix
 
 .col-md-3{style: 'padding: 0px 15px 0px 0px;'}
