manipulate calendar events on front-end without reloading page

--- a/app/views/trips/_calendar.html.haml
+++ b/app/views/trips/_calendar.html.haml
@@ -4,10 +4,9 @@
 - currentDate = nil if !defined? currentDate
 
 :javascript
-  var calendar;
   $(document).ready(function() { 
 
-    calendar = $('#calendar').fullCalendar({
+    $('#calendar').fullCalendar({
       currentDate: new Date(#{currentDate}),
       header: false,
       defaultView: 'resourceDay',
