Finished front-end work on recurring driver compliance events [finishes#98939234]

--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -1,7 +1,7 @@
 <tr class="document-<%= document.id %>">
   <td>
     <p class="form-control-static">
-      <%= document.document_updated_at.to_s(:form) %>
+      <%= document.document_updated_at.to_s(:long) %>
     </p>
   </td>
   <td>
