--- a/app/views/driver_histories/_driver_history.html.erb
+++ b/app/views/driver_histories/_driver_history.html.erb
@@ -1,7 +1,7 @@
 <tr class="driver_history-<%= driver_history.id %>">
   <td>
     <p class="form-control-static">
-      <%= driver_history.event_date.to_s(:form) %>
+      <%= driver_history.event_date.to_s(:long) %>
     </p>
   </td>
   <td>
