--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -14,14 +14,15 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-sm-12 col-md-6">
     <table class="table table-striped table-bordered" id="documents-table">
       <thead>
         <tr>
-          <th class="col-md-6"><%= translate_helper("driver_form_name") %></th>
-          <th class="col-md-2"><%= translate_helper("driver_form_active") %></th>
-          <th class="col-md-2"><%= translate_helper("paid") %></th>
-          <th class="col-md-2"><%= translate_helper("driver_form_available") %></th>
+          <th class="col-sm-4"><%= translate_helper("driver_form_name") %></th>
+          <th class="col-sm-2"><%= translate_helper("driver_form_active") %></th>
+          <th class="col-sm-2"><%= translate_helper("paid") %></th>
+          <th class="col-sm-2"><%= translate_helper("driver_form_available") %></th>
+          <th class="col-sm-2"><%= translate_helper("driver_overdue_events") %></th>
         </tr>
       </thead>
       <tbody>
