--- a/app/views/recurring_driver_compliances/_form.html.erb
+++ b/app/views/recurring_driver_compliances/_form.html.erb
@@ -12,14 +12,6 @@
     </div>
   <% end %>
   
-  <% if @readonly %>
-    <div class="panel panel-warning">
-      <div class="panel-body">
-        <p><%= translate_helper("recurring_driver_compliance_form_readonly_notice") %></p>
-      </div>
-    </div>
-  <% end %>
-
   <div class="row">
     <div class="col-sm-12 col-md-6">
       <div class="panel panel-default">
@@ -28,19 +20,19 @@
           <div class="form-group">
             <%= f.label :event_name, translate_helper("recurring_driver_compliance_form_event_name"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.text_field :event_name, class: "form-control" %>
+              <%= f.text_field :event_name, class: "form-control", disabled: @all_readonly %>
             </div>
           </div>  
           <div class="form-group">
             <%= f.label :event_notes, translate_helper("recurring_driver_compliance_form_event_notes"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.text_area :event_notes, class: "form-control", rows: 3 %>
+              <%= f.text_area :event_notes, class: "form-control", rows: 3, disabled: @all_readonly %>
             </div>
           </div>  
           <div class="form-group">
             <%= f.label :recurrence_notes, translate_helper("recurring_driver_compliance_form_recurrence_notes"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.text_area :recurrence_notes, class: "form-control", rows: 3, disabled: @readonly %>
+              <%= f.text_area :recurrence_notes, class: "form-control", rows: 3, disabled: @all_readonly %>
             </div>
           </div>  
         </div><!-- END .panel-body -->
@@ -49,23 +41,23 @@
       <div class="panel panel-default">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_form_recurrence_schedule_header") %></div>
         <div class="panel-body form-horizontal">
-          <div class="form-group updates-schedule-preview">
+          <div class="form-group">
             <%= f.label :recurrence_frequency, translate_helper("recurring_driver_compliance_form_recurrence_frequency"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.number_field :recurrence_frequency, min: 1, class: "form-control", disabled: @readonly %>
+              <%= f.number_field :recurrence_frequency, min: 1, class: "form-control updates-schedule-preview schedule-preview-required updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
             </div>
           </div>  
-          <div class="form-group updates-schedule-preview">
+          <div class="form-group">
             <%= f.label :recurrence_schedule, translate_helper("recurring_driver_compliance_form_recurrence_schedule"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.select :recurrence_schedule, RecurringDriverCompliance::RECURRENCE_SCHEDULES.map(&:to_s), { selected: @recurring_driver_compliance.recurrence_schedule }, class: "form-control", disabled: @readonly %>
+              <%= f.select :recurrence_schedule, RecurringDriverCompliance::RECURRENCE_SCHEDULES.map(&:to_s), { selected: @recurring_driver_compliance.recurrence_schedule }, class: "form-control updates-schedule-preview schedule-preview-required updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
             </div>
           </div>  
-          <div class="form-group updates-schedule-preview">
+          <div class="form-group">
             <%= f.label :start_date, translate_helper("recurring_driver_compliance_form_start_date"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
               <div class="input-group datepicker-icon">
-                <%= f.text_field :start_date, class: "form-control datepicker", disabled: @readonly %>
+                <%= f.text_field :start_date, class: "form-control datepicker updates-schedule-preview schedule-preview-required updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
                 <div class="input-group-btn">
                   <button class="btn btn-default" type="button" <%= "disabled=\"disabled\"" if @readonly %>>
                     <%= image_tag "calendar-clock.png" %>
@@ -75,11 +67,16 @@
             </div>
           </div>
         </div><!-- END .panel-body -->
-        <div class="panel-footer schedule-preview">
-          <strong><%= translate_helper("recurring_driver_compliance_form_schedule_preview_header") %></strong>
-          <ul></ul>
-        </div><!-- END .panel-footer -->
-        
+        <div class="panel-footer schedule-preview-panel">
+          <p><strong><%= translate_helper("recurring_driver_compliance_form_schedule_preview_header") %></strong></p>
+          <div class="schedule-preview">
+            <% if @schedule_preview.present? %>
+              <%= render partial: "schedule_preview", locals: {dates: @schedule_preview} %>
+            <% else %>
+              <p class="text-muted"><%= translate_helper("recurring_driver_compliance_form_schedule_preview_placeholder_text") %></p>
+            <% end %>
+          </div>
+        </div><!-- END .panel-footer -->        
       </div><!-- END .panel -->
     </div><!-- END .col-md-6 -->
 
@@ -87,13 +84,23 @@
       <div class="panel panel-default">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_form_compliance_date_based_scheduling_heading") %></div>
         <div class="panel-body form-horizontal">
-          <div class="checkbox updates-schedule-preview">
+          <div class="checkbox">
             <%= f.label :compliance_date_based_scheduling do %>
-              <%= f.check_box :compliance_date_based_scheduling, disabled: @readonly %>
+              <%= f.check_box :compliance_date_based_scheduling, disabled: @readonly, class: "updates-schedule-preview updates-future-schedule-preview" %>
               <%= translate_helper("recurring_driver_compliance_form_compliance_date_based_scheduling") %>
             <% end %>
           </div>
         </div><!-- END .panel-body -->
+        <div class="panel-footer compliance-date-based-scheduling-preview-panel">
+          <p><strong><%= translate_helper("recurring_driver_compliance_form_compliance_date_based_schedule_preview_header") %></strong></p>
+          <div class="schedule-preview">
+            <% if @compliance_date_based_schedule_preview.present? %>
+              <%= render partial: "schedule_preview", locals: {dates: @compliance_date_based_schedule_preview} %>
+            <% else %>
+              <p class="text-muted"><%= translate_helper("recurring_driver_compliance_form_compliance_date_based_schedule_preview_placeholder_text") %></p>
+            <% end %>
+          </div>
+        </div><!-- END .panel-footer -->
       </div><!-- END .panel -->
 
       <div class="panel panel-default">
@@ -102,58 +109,139 @@
           <div class="form-group">
             <%= f.label :future_start_rule, translate_helper("recurring_driver_compliance_form_future_start_rule"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.select :future_start_rule, RecurringDriverCompliance::FUTURE_START_RULES.map(&:to_s), { selected: @recurring_driver_compliance.future_start_rule }, class: "form-control", disabled: @readonly %>
+              <%= f.select :future_start_rule, RecurringDriverCompliance::FUTURE_START_RULES.collect{ |rule| [translate_helper("recurring_driver_compliance_form_future_start_rule_#{rule.to_s}") ,rule.to_s] }, { selected: @recurring_driver_compliance.future_start_rule }, class: "form-control updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
             </div>
           </div>  
-          <div class="form-group future_start_rule_time_span">
+          <div class="form-group future-start-rule-time-span">
             <%= f.label :future_start_frequency, translate_helper("recurring_driver_compliance_form_future_start_frequency"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.number_field :future_start_frequency, min: 1, class: "form-control", disabled: @readonly %>
+              <%= f.number_field :future_start_frequency, min: 1, class: "form-control updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
             </div>
           </div>  
-          <div class="form-group future_start_rule_time_span">
+          <div class="form-group future-start-rule-time-span">
             <%= f.label :future_start_schedule, translate_helper("recurring_driver_compliance_form_future_start_schedule"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
-              <%= f.select :future_start_schedule, RecurringDriverCompliance::RECURRENCE_SCHEDULES.map(&:to_s), { selected: @recurring_driver_compliance.future_start_schedule }, class: "form-control", disabled: @readonly %>
+              <%= f.select :future_start_schedule, RecurringDriverCompliance::RECURRENCE_SCHEDULES.map(&:to_s), { selected: @recurring_driver_compliance.future_start_schedule }, class: "form-control updates-future-schedule-preview future-schedule-preview-required", disabled: @readonly %>
             </div>
-          </div>  
+          </div>
         </div><!-- END .panel-body -->
+        <div class="panel-footer future-schedule-preview-panel">
+          <p><strong><%= translate_helper("recurring_driver_compliance_form_future_schedule_preview_header") %></strong></p>
+          <div class="schedule-preview">
+            <% if @future_schedule_preview.present? %>
+              <%= render partial: "schedule_preview", locals: {dates: @future_schedule_preview} %>
+            <% else %>
+              <% if @recurring_driver_compliance.future_start_rule.try(:to_sym) == :time_span %>
+                <p class="text-muted"><%= translate_helper("recurring_driver_compliance_form_future_schedule_time_span_preview_placeholder_text") %></p>
+              <% elsif @recurring_driver_compliance.future_start_rule.try(:to_sym) == :on_schedule %>
+                <p class="text-muted"><%= translate_helper("recurring_driver_compliance_form_future_schedule_on_schedule_preview_placeholder_text") %></p>
+              <% else %>
+                <p class="text-muted"><%= translate_helper("recurring_driver_compliance_form_future_schedule_immediately_preview_placeholder_text") %></p>
+              <% end %>
+            <% end %>
+          </div>
+        </div><!-- END .panel-footer -->
       </div><!-- END .panel -->
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
-
-  <div class="row form-actions"><%= f.submit translate_helper("recurring_driver_compliance_form_submit"), class: "btn action-button" %></div>
+  <% unless @all_readonly %>
+    <div class="row form-actions"><%= f.submit translate_helper("recurring_driver_compliance_form_submit"), class: "btn action-button" %></div>
+  <% end %>
 <% end %> 
 
 <%= javascript_tag do %>
   $(document).ready(function(){
     $("#recurring_driver_compliance_future_start_rule").on("change", function() {
-      if ($(this).val() == "time_span") {
-        $(".future_start_rule_time_span").show();
+      if (RecurringDriverCompliance.future_start_rule_is("time_span")) {
+        $(".future-start-rule-time-span").fadeIn();
       } else {
-        $(".future_start_rule_time_span").hide();
+        $(".future-start-rule-time-span").fadeOut();
       }
     }).trigger("change");
-    
-    $(".updates-schedule-preview").on("change", function() {
-      var emptyInputs = $("#recurring_driver_compliance_recurrence_frequency, #recurring_driver_compliance_recurrence_schedule, #recurring_driver_compliance_start_date").filter(function() { return $(this).val() == ""; });
-      var previewContainer = $(".schedule-preview");
-      var preview = previewContainer.find("ul");
-      if (emptyInputs.length == 0) {
-        preview.fadeOut();
-        var data = $("#recurring_driver_compliance_recurrence_frequency, #recurring_driver_compliance_recurrence_schedule, #recurring_driver_compliance_start_date, #recurring_driver_compliance_compliance_date_based_scheduling").serialize();
-        $.getJSON("<%= preview_schedule_recurring_driver_compliances_path %>", data, function(data) {
-          var text = "<li>" + data.join("</li><li>") + "</li>"
-          preview.html(text).fadeIn();
-          previewContainer.show();
+
+    $("#recurring_driver_compliance_compliance_date_based_scheduling").on("change", function() {
+      if ($(this).is(":checked")) {
+        $(".compliance-date-based-scheduling-preview-panel").fadeIn();
+      } else {
+        $(".compliance-date-based-scheduling-preview-panel").fadeOut();
+      }
+    }).trigger("change");
+  
+    <% unless @readonly %>
+      $(".updates-schedule-preview").on("change", function() {
+        RecurringDriverCompliance.updateSchedulePreview(
+          $(".schedule-preview-panel"),
+          $(".schedule-preview-required"),
+          $(".updates-schedule-preview"),
+          '<p class="text-muted"><%= j translate_helper("recurring_driver_compliance_form_schedule_preview_placeholder_text") %></p>',
+          '<%= j preview_schedule_recurring_driver_compliances_path %>',
+          'An error occurred generating the schedule preview.'
+        );
+
+        if ($("#recurring_driver_compliance_compliance_date_based_scheduling").is(":checked")) {
+          RecurringDriverCompliance.updateSchedulePreview(
+            $(".compliance-date-based-scheduling-preview-panel"),
+            $(".schedule-preview-required"),
+            $(".updates-schedule-preview"),
+            '<p class="text-muted"><%= j translate_helper("recurring_driver_compliance_form_compliance_date_based_schedule_preview_placeholder_text") %></p>',
+            '<%= j preview_compliance_date_based_schedule_recurring_driver_compliances_path %>',
+            'An error occurred generating the compliance date based schedule preview.'
+          );
+        }
+      });
+  
+      $(".updates-future-schedule-preview").on("change", function() {
+        if (RecurringDriverCompliance.future_start_rule_is("time_span")) {
+          var $schedulingInputs = $(".future-schedule-preview-required");
+          var defaultPreviewText = '<p class="text-muted"><%= j translate_helper("recurring_driver_compliance_form_future_schedule_time_span_preview_placeholder_text") %></p>';
+        }
+        else if (RecurringDriverCompliance.future_start_rule_is("on_schedule")) {
+          var $schedulingInputs = $(".schedule-preview-required");
+          var defaultPreviewText = '<p class="text-muted"><%= j translate_helper("recurring_driver_compliance_form_future_schedule_on_schedule_preview_placeholder_text") %></p>';
+        }
+        else {
+          var $schedulingInputs = $(".schedule-preview-required");
+          var defaultPreviewText = '<p class="text-muted"><%= j translate_helper("recurring_driver_compliance_form_future_immediately_schedule_preview_placeholder_text") %></p>';
+        }  
+      
+        RecurringDriverCompliance.updateSchedulePreview(
+          $(".future-schedule-preview-panel"),
+          $schedulingInputs,
+          $(".updates-future-schedule-preview"),
+          defaultPreviewText,
+          '<%= j preview_future_schedule_recurring_driver_compliances_path %>',
+          'An error occurred generating the future schedule preview.'
+        );
+      });
+    <% end %>
+  });
+
+  var RecurringDriverCompliance = {
+    future_start_rule_is: function (rule) {
+      return !!($("#recurring_driver_compliance_future_start_rule").val() == rule);
+    },
+
+    updateSchedulePreview: function ($previewContainer, $schedulingInputs, $formInputs, defaultPreviewText, targetUrl, errorText) {
+      var previewTarget = $previewContainer.find(".schedule-preview");
+      RecurringDriverCompliance.previewText(previewTarget, defaultPreviewText);
+      if ($schedulingInputs.filter(function() { return $(this).val() == ""; }).length == 0) {
+        RecurringDriverCompliance.previewText(previewTarget, "Calculating...");
+        $.get(targetUrl, $formInputs.serialize(), function(data) {
+          RecurringDriverCompliance.previewText(previewTarget, data);
         })
         .fail(function() {
-          console.log("wut?", arguments);
-          previewContainer.hide();
+          console.log(errorText, arguments);
+          RecurringDriverCompliance.previewText(previewTarget, '<p class="text-warning">' + errorText + ' Please make sure all scheduling fields are complete and valid.</p>');
         })
       } else {
-        previewContainer.hide();
+        RecurringDriverCompliance.previewText(previewTarget, defaultPreviewText);
       }
-    }).trigger("change");
-  });
+    },
+
+    previewText: function (target, new_text) {
+      if (new_text != target.html()) {
+        target.fadeOut(function(){ target.html(new_text).fadeIn(); });
+      }
+    }
+  };
 <% end %>
