--- a/app/views/driver_histories/_form.html.erb
+++ b/app/views/driver_histories/_form.html.erb
@@ -15,7 +15,7 @@
   
   <div class="row">
     <div class="col-md-12">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-body form-horizontal">
           <div class="form-group">
             <%= f.label :event, translate_helper("driver_history_form_event"), class: "col-md-3 control-label" %>
