--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -7,7 +7,7 @@
   <div class="col-sm-12 col-md-6">
     <% if can? :manage, @driver %>
       <div class="pull-right">
-        <%= link_to translate_helper("new_driver_link_text"), new_driver_path, class: "btn btn-default btn-sm" %>
+        <%= link_to translate_helper("new_driver_link_text"), new_driver_path, class: "btn action-button btn-sm" %>
       </div>
     <% end %>
   </div>
