--- a/app/views/recurring_driver_compliances/_form.html.erb
+++ b/app/views/recurring_driver_compliances/_form.html.erb
@@ -14,7 +14,7 @@
   
   <div class="row">
     <div class="col-sm-12 col-md-6">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_form_details_header") %></div>
         <div class="panel-body form-horizontal">
           <div class="form-group">
@@ -38,7 +38,7 @@
         </div><!-- END .panel-body -->
       </div><!-- END .panel -->
 
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_form_recurrence_schedule_header") %></div>
         <div class="panel-body form-horizontal">
           <div class="form-group">
@@ -81,7 +81,7 @@
     </div><!-- END .col-md-6 -->
 
     <div class="col-sm-12 col-md-6">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_form_compliance_date_based_scheduling_heading") %></div>
         <div class="panel-body form-horizontal">
           <div class="checkbox">
@@ -103,7 +103,7 @@
         </div><!-- END .panel-footer -->
       </div><!-- END .panel -->
 
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading"><%= translate_helper("recurring_driver_compliance_recurrence_future_scheduling_heading") %></div>
         <div class="panel-body form-horizontal">
           <div class="form-group">
