--- a/app/views/recurring_driver_compliances/new.html.erb
+++ b/app/views/recurring_driver_compliances/new.html.erb
@@ -6,10 +6,10 @@
   </div>
   <div class="col-sm-12 col-md-6">
     <div class="pull-right">
-      <%= link_to translate_helper("cancel"), recurring_driver_compliances_path, class: "btn btn-default btn-sm" %>
-      <button class="btn btn-default btn-sm" id="recurring_driver_compliance_form_submit">
+      <button class="btn action-button btn-sm" id="recurring_driver_compliance_form_submit">
         <%= translate_helper("recurring_driver_compliance_form_submit") %>
       </button>
+      <%= link_to translate_helper("cancel"), recurring_driver_compliances_path, class: "btn action-button btn-sm" %>
     </div>
   </div>
 </div>
