--- a/app/views/addresses/_upload_form.html.haml
+++ b/app/views/addresses/_upload_form.html.haml
@@ -16,7 +16,7 @@
             = f.input "file", required:true, :label => translate_helper(:select_address_file_to_upload),:as => :file
     :javascript
       if(#{provider.address_upload_flag.is_loading}) {
-        $('#address_upload_div input[type=submit]').text("#{translate_helper(:uploading)}");
+        $('#address_upload_div input[type=submit]').val("#{translate_helper(:uploading)}");
         $('#address_upload_div input[type=submit]').attr('disabled', 'disabled');
         timer = setInterval(function(){
           if ($('#address_upload_div input[type=submit]:disabled').length === 0) {
@@ -28,7 +28,7 @@
               async: false,
               success: function(status) { 
                 if(!status.is_loading) {
-                  $('#address_upload_div input[type=submit]').text("#{translate_helper(:upload)}");
+                  $('#address_upload_div input[type=submit]').val("#{translate_helper(:upload)}");
                   $('#address_upload_div input[type=submit]:disabled').removeAttr('disabled');
                   show_alert(status.summary);
                 }
